ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all|filter(data == {}).snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all|filter(data == {})\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Data(
                        [],
                    ),
                    op: Eq,
                    value: FilterValue(
                        Object {},
                    ),
                },
            ),
        ],
    },
)
