ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all|filter(data.array[3] == 42).snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all|filter(data.array[3] == 42)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Data(
                        [
                            Field(
                                "array",
                            ),
                            Index(
                                3,
                            ),
                        ],
                    ),
                    op: Eq,
                    value: FilterValue(
                        Number(42),
                    ),
                },
            ),
        ],
    },
)
