ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all|filter(data.last_updated == "foo").snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all|filter(data.last_updated == \"foo\")\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Data(
                        [
                            Field(
                                "last_updated",
                            ),
                        ],
                    ),
                    op: Eq,
                    value: FilterValue(
                        String("foo"),
                    ),
                },
            ),
        ],
    },
)
