ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all|filter(entity != 42).snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all|filter(entity != 42)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Entity,
                    op: Ne,
                    value: Integer(
                        42,
                    ),
                },
            ),
        ],
    },
)
