ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all|sortBy(data.score desc).snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all|sortBy(data.score desc)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            SortBy(
                Column(
                    Data(
                        [
                            Field(
                                "score",
                            ),
                        ],
                    ),
                ),
                Desc,
            ),
        ],
    },
)
